Removed Sensitive Info

--- a/Segmenting & Clustering Neighborhoods in Toronto - FINAL.ipynb
+++ b/Segmenting & Clustering Neighborhoods in Toronto - FINAL.ipynb
@@ -632,8 +632,8 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: BLM5IS3MPFE1X23XVH3FUZGY5WOIPUA2LLYVVZPXYNU1W0LL\n",
-      "CLIENT_SECRET:3ZWN0UND0XZKO5U0H2JOKLPVWF51JDKOIGWVI4NFFUODGPYN\n"
+      "CLIENT_ID: \n",
+      "CLIENT_SECRET:\n"
      ]
     }
    ],
